[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/UpdateDownloader.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/ariblk.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/textures/loading.png" type="Texture" id=3]
[ext_resource path="res://resources/presets/StartMenuButton.tres" type="Theme" id=4]
[ext_resource path="res://resources/presets/LineEdit.tres" type="Theme" id=5]
[ext_resource path="res://resources/presets/FileDialog.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.678431, 0.678431, 0.678431, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.678431, 0.678431, 0.678431, 1 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="UpdateDownloader" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="VersionSelector" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VersionSelector"]
margin_right = 1264.0
margin_bottom = 704.0

[node name="ScrollContainer" type="ScrollContainer" parent="VersionSelector/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 673.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VersionSelector/VBoxContainer/ScrollContainer"]
margin_right = 1264.0
margin_bottom = 673.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleCenter" type="CenterContainer" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/TitleCenter"]
margin_left = 512.0
margin_right = 751.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Looking for a change?"

[node name="InfoLabel" type="Label" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1264.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Select a Version of BlockyOS to download below.
We'll do the rest of the work for you."
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 1264.0
margin_bottom = 143.0

[node name="DLLLabel" type="Label" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 23.0
size_flags_horizontal = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 8 )
text = "Download location: "
align = 1

[node name="DLLLoc" type="HBoxContainer" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 1264.0
margin_bottom = 56.0

[node name="DLLEdit" type="LineEdit" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/DLLLoc"]
margin_right = 630.0
margin_bottom = 29.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "[OS Downloads Page]"
align = 1
placeholder_text = "Empty will result in downloads path"
caret_blink = true

[node name="PickLoc" type="Button" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/DLLLoc"]
margin_left = 634.0
margin_right = 1264.0
margin_bottom = 29.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "Pick Download Location"

[node name="MainContainer" type="CenterContainer" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 1264.0
margin_bottom = 147.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer"]
margin_left = 632.0
margin_right = 632.0

[node name="DescriptionLabel" type="Label" parent="VersionSelector/VBoxContainer"]
margin_top = 677.0
margin_right = 1264.0
margin_bottom = 704.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "BlockyOS Update Downloader | Blockyheadman
Powered Pridefully by Godot Game Engine"
align = 1
autowrap = true

[node name="Await" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Await"]
margin_right = 1264.0
margin_bottom = 704.0

[node name="ScrollContainer" type="ScrollContainer" parent="Await/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Await/VBoxContainer/ScrollContainer"]
margin_right = 1264.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleCenter" type="CenterContainer" parent="Await/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Await/VBoxContainer/ScrollContainer/VBoxContainer/TitleCenter"]
margin_left = 574.0
margin_right = 690.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Found it! :)"

[node name="InfoLabel" type="Label" parent="Await/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1264.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "We are currently downloading and installing your version of BlockyOS.
Stay tuned for greatness!"
align = 1
autowrap = true

[node name="MainContainer" type="CenterContainer" parent="Await/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 1264.0
margin_bottom = 215.0
size_flags_horizontal = 3

[node name="LoadingIcon" type="TextureRect" parent="Await/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer"]
margin_left = 568.0
margin_right = 696.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 64, 64 )
size_flags_horizontal = 5
texture = ExtResource( 3 )

[node name="DescriptionLabel" type="Label" parent="Await/VBoxContainer"]
margin_top = 692.0
margin_right = 1264.0
margin_bottom = 704.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "If you close this window, the download will finish but not automatically open"
align = 1
autowrap = true

[node name="Error" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Error"]
margin_right = 1264.0
margin_bottom = 704.0

[node name="ScrollContainer" type="ScrollContainer" parent="Error/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Error/VBoxContainer/ScrollContainer"]
margin_right = 1264.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleCenter" type="CenterContainer" parent="Error/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1264.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Error/VBoxContainer/ScrollContainer/VBoxContainer/TitleCenter"]
margin_left = 586.0
margin_right = 678.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Uh oh! :("

[node name="InfoLabel" type="Label" parent="Error/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1264.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "There seems to have been a problem here.."
align = 1
autowrap = true

[node name="DescriptionLabel" type="Label" parent="Error/VBoxContainer"]
margin_top = 692.0
margin_right = 1264.0
margin_bottom = 704.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Error Code ????"
align = 1
autowrap = true

[node name="DownloadLoc" type="FileDialog" parent="."]
anchor_left = 0.275
anchor_top = 0.25
anchor_right = 0.725
anchor_bottom = 0.75
margin_bottom = -6.10352e-05
theme = ExtResource( 6 )
window_title = "Open a Directory"
mode = 2
access = 2

[node name="FileChecker" type="HTTPRequest" parent="."]
timeout = 20.0

[connection signal="pressed" from="VersionSelector/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer/DLLLoc/PickLoc" to="." method="_on_PickLoc_pressed"]
[connection signal="dir_selected" from="DownloadLoc" to="." method="_on_DownloadLoc_dir_selected"]
[connection signal="request_completed" from="FileChecker" to="." method="_on_FileChecker_request_completed"]
